<resources>
    <string name="app_name">MiSalud</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar">Registrarse</string>
    <string name="ingresar_ahora">Ingresar ahora</string>
    <string name="registrarse_ahora">Registrarse ahora</string>
    <string name="salir">Salir</string>
    <string name="expedientes">Expedientes</string>
    <string name="nombre">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="agregar_expediente">Agregar expediente</string>
    <string name="edad">Edad</string>
    <string name="recuperar_contraseña">Recuperar Contraseña</string>
    <string name="confirmar">Confirmar</string>
    <string name="Correo_recuperacion">Correo Electronico</string>
    <string name="recuperar_contra">Recuperar Contraseña</string>
    <string name="juntaVi">Junta vigilancia</string>
    <string name="profesion">Profesión</string>
    <string name="numeroJun">Numero de junta</string>

</resources>